--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.42.0",
     "react-native-elements": "^0.10.2",
     "react-native-firebase": "^1.0.0-alpha8",
+    "react-native-google-signin": "^0.9.0",
     "react-native-router-flux": "^3.38.0",
     "react-native-vector-icons": "^4.0.0"
   },
